--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,6 @@
 nodes:
   -
-    leader: true
-    name: leader
+    server_id: 1
     bind_addr: 127.0.0.1
     bind_port: 8081
     push_pull_interval_ms: 1000
@@ -9,8 +8,7 @@ nodes:
   #    join_timeout_s: 10
   #    assemble_timeout_s: 30
   -
-    leader: false
-    name: node-1
+    server_id: 2
     bind_addr: 127.0.0.1
     bind_port: 8082
     push_pull_interval_ms: 1000
@@ -18,8 +16,7 @@ nodes:
     join_nodes:
       - 127.0.0.1:8081
   -
-    leader: false
-    name: node-2
+    server_id: 3
     bind_addr: 127.0.0.1
     bind_port: 8083
     push_pull_interval_ms: 1000
