--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,14 +1,16 @@
 nodes:
   -
-    server_id: 1
+    node_id: 1
     bind_addr: 127.0.0.1
     bind_port: 8081
     push_pull_interval_ms: 1000
     join_nodes_num: 3
   #    join_timeout_s: 10
   #    assemble_timeout_s: 30
+    debug: true
+
   -
-    server_id: 2
+    node_id: 2
     bind_addr: 127.0.0.1
     bind_port: 8082
     push_pull_interval_ms: 1000
@@ -16,8 +18,10 @@ nodes:
     join_nodes:
       - 127.0.0.1:8081
       - 127.0.0.1:8083
+    debug: true
+
   -
-    server_id: 3
+    node_id: 3
     bind_addr: 127.0.0.1
     bind_port: 8083
     push_pull_interval_ms: 1000
@@ -25,3 +29,4 @@ nodes:
     join_nodes:
       - 127.0.0.1:8081
       - 127.0.0.1:8082
+    debug: true
