--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,9 +4,10 @@ nodes:
     bind_addr: 127.0.0.1
     bind_port: 8081
     push_pull_interval_ms: 1000
-    join_nodes_num: 3
-  #    join_timeout_s: 10
-  #    assemble_timeout_s: 30
+    join_nodes:
+      - 127.0.0.1:8082
+      - 127.0.0.1:8083
+    join_timeout_s: 10
     assemble_timeout_s: 300
     debug: true
 
@@ -15,9 +16,9 @@ nodes:
     bind_addr: 127.0.0.1
     bind_port: 8082
     push_pull_interval_ms: 1000
-    join_nodes_num: 3
     join_nodes:
       - 127.0.0.1:8081
+      - 127.0.0.1:8083
     assemble_timeout_s: 300
     debug: true
 
@@ -26,8 +27,8 @@ nodes:
     bind_addr: 127.0.0.1
     bind_port: 8083
     push_pull_interval_ms: 1000
-    join_nodes_num: 3
     join_nodes:
       - 127.0.0.1:8081
+      - 127.0.0.1:8083
     assemble_timeout_s: 300
     debug: true
