--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,6 +5,9 @@ nodes:
     bind_port: 8081
     push_pull_interval_ms: 1000
     join_timeout_s: 10
+    join_nodes:
+      - 127.0.0.1:8083
+      - 127.0.0.1:8082
     assemble_timeout_s: 300
     debug: true
 
@@ -15,6 +18,7 @@ nodes:
     push_pull_interval_ms: 1000
     join_nodes:
       - 127.0.0.1:8081
+      - 127.0.0.1:8083
     assemble_timeout_s: 300
     debug: true
 
@@ -25,5 +29,6 @@ nodes:
     push_pull_interval_ms: 1000
     join_nodes:
       - 127.0.0.1:8081
+      - 127.0.0.1:8082
     assemble_timeout_s: 300
     debug: true
